# crisprapido

./: .gitignore  CONTEXT.md  Cargo.toml  LICENSE  README.md  env.sh  mismatch_scores.txt  pam_scores.txt  results.txt  run_crisprapido_hg00097.sh  simple_test.fa  test.fa  test_20bp_mismatches.fa  test_20bp_mismatches_differentlentgh.fa  test_genome.fa  test_mismatches.fa  test_multi.fa
.github/workflows/: ci.yml
benches/: dna_vs_iupac.rs
src/: cfd_score.rs  lib.rs  main.rs  mismatch_scores.txt  pam_scores.txt  scoring.rs
tests/: cfd_python_comparison.rs  cfd_tests.rs
tests/python_comparison/: expected_values.json  generate_test_cases.py
