[package]
name = "crisprapido"
version = "0.1.0"
edition = "2021"

[features]
debug = []

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
bio = "2.2.0"
lib_wfa2 = { git = "https://github.com/AndreaGuarracino/lib_wfa2", rev = "c608c436a6753d2c21c97d9f5c338efae99d042b"}
rand = { version = "0.9.0", features = ["small_rng"] }
rayon = "1.10.0"
flate2 = "1.1.0"
lazy_static = "1.4"
