[package]
name = "crisprapido"
version = "0.1.0"
edition = "2021"

[features]
debug = []

[[bench]]
name = "dna_vs_iupac"
harness = false

[dependencies]
sassy = { git = "https://github.com/RagnarGrootKoerkamp/sassy", branch = "master" }
clap = { version = "4.5.37", features = ["derive"] }
bio = "2.2.0"
rand = { version = "0.9.0", features = ["small_rng"] }
rayon = "1.10.0"
flate2 = "1.1.0"
lazy_static = "1.4"
crossbeam-channel = "0.5"
